# korus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  epoll_imp.cpp  epoll_imp.h  idle_distributor.cpp  idle_helper.cpp  kqueue_imp.cpp  reactor_loop.h  task_queue.h  tcp_channel_base.h  tcp_client.cpp  tcp_client.h  tcp_listen.cpp  tcp_listen.h  tcp_server.cpp  tcp_server.h  tcp_server_channel.h  tcp_threadpool_demo.sln  tcp_threadpool_demo.vcxproj  tcp_threadpool_demo.vcxproj.filters  tcp_util.cpp  thread_object.cpp  thread_object.h  timer_helper.cpp  timer_sheduler.cpp  unique_optional_lock.cpp
example/src/: CMakeLists.txt
example/src/exts/dns/: CMakeLists.txt  c-ares_epoll.cpp
example/src/exts/domain/: CMakeLists.txt  c-ares_epoll.cpp  rector_hostbyname.cpp
example/src/exts/socks5/: CMakeLists.txt  ftp_server.cpp  socks5_associatecmd_client.cpp  socks5_associatecmd_server.cpp  socks5_bindcmd_client.cpp  socks5_bindcmd_server.cpp  socks5_connectcmd_client.cpp  socks5_connectcmd_server.cpp  socks5_server.cpp  socks5_tcp_client.cpp  tcp_server.cpp  udp_server.cpp
example/src/tcp/: CMakeLists.txt  multithread_tcp_client.cpp  multithread_tcp_client_domain.cpp  multithread_tcp_server.cpp  reactor_tcp_client.cpp  reactor_tcp_server.cpp
example/src/tcp/multithread_tcp_client/: CMakeLists.txt  multithread_tcp_client.cpp
example/src/tcp/multithread_tcp_server/: multithread_tcp_server.cpp
example/src/tcp/reactor_tcp_client/: CMakeLists.txt  reactor_tcp_client.cpp
example/src/tcp/reactor_tcp_server/: CMakeLists.txt  reactor_tcp_server.cpp
example/src/udp/: CMakeLists.txt  multithread_udp_client.cpp  multithread_udp_server.cpp  reactor_udp_client.cpp  reactor_udp_server.cpp
example/src/udp/multithread_udp_client/: CMakeLists.txt  multithread_udp_client.cpp
example/src/udp/multithread_udp_server/: CMakeLists.txt  multithread_udp_server.cpp
example/src/udp/reactor_udp_client/: CMakeLists.txt  reactor_udp_client.cpp
example/src/udp/reactor_udp_server/: CMakeLists.txt  reactor_udp_server.cpp
example/tcp/multithread_tcp_client/: multithread_tcp_client.cpp
example/tcp/multithread_tcp_server/: CMakeLists.txt  multithread_tcp_server.cpp
konus/: CMakeLists.txt
konus/inc/: konus.h
konus/src/reactor/: backend_poller.cpp  backend_poller.h  epoll_imp.cpp  idle_distributor.h  idle_helper.h  reactor_loop.cpp  reactor_loop.h  timer_sheduler.cpp  timer_sheduler.h
konus/src/tcp/: tcp_channel_base.h  tcp_client.h  tcp_client_channel.cpp  tcp_client_channel.h  tcp_listen.cpp  tcp_listen.h  tcp_server_channel.h
konus/src/thread/: thread_object.cpp  thread_object.h
konus/src/util/: tcp_util.cpp  thread_safe_objbase.cpp  thread_safe_objbase.h  unique_optional_lock.h
korus/: CMakeLists.txt
korus/inc/: korus.h
korus/src/exts/domain/: domain_async_resolve_helper.cpp  domain_async_resolve_helper.h  domain_cache_mgr.cpp  domain_cache_mgr.h  tcp_client_channel_domain.cpp  tcp_client_channel_domain.h  tcp_client_domain.cpp  tcp_client_domain.h
korus/src/exts/socks5/: socks5_associatecmd_client_channel.cpp  socks5_associatecmd_client_channel.h  socks5_associatecmd_filter_server_channel.cpp  socks5_associatecmd_filter_server_channel.h  socks5_associatecmd_server_channel.cpp  socks5_associatecmd_server_channel.h  socks5_associatecmd_tunnel_server_channel.cpp  socks5_associatecmd_tunnel_server_channel.h  socks5_bindcmd_client_channel.cpp  socks5_bindcmd_client_channel.h  socks5_bindcmd_filterbind_client_channel.cpp  socks5_bindcmd_filterbind_client_channel.h  socks5_bindcmd_filterconnect_client_channel.cpp  socks5_bindcmd_filterconnect_client_channel.h  socks5_bindcmd_integration_handler_base.cpp  socks5_bindcmd_integration_handler_base.h  socks5_bindcmd_originalbind_client_channel.cpp  socks5_bindcmd_originalbind_client_channel.h  socks5_bindcmd_server_channel.cpp  socks5_bindcmd_server_channel.h  socks5_bindcmd_tunnel_server_channel.cpp  socks5_bindcmd_tunnel_server_channel.h  socks5_client.cpp  socks5_client.h  socks5_client_channel.cpp  socks5_client_channel.h  socks5_client_channel_base.cpp  socks5_client_channel_base.h  socks5_connectcmd_client_channel.cpp  socks5_connectcmd_client_channel.h  socks5_connectcmd_embedbind_client_channel.cpp  socks5_connectcmd_embedbind_client_channel.h  socks5_connectcmd_server_channel.cpp  socks5_connectcmd_server_channel.h  socks5_connectcmd_tunnel_client_channel.cpp  socks5_connectcmd_tunnel_client_channel.h  socks5_introduce.txt  socks5_proto.h  socks5_server.cpp  socks5_server.h  (+6 more)
korus/src/reactor/: backend_poller.h  epoll_imp.cpp  epoll_imp.h  idle_distributor.cpp  idle_helper.cpp  idle_helper.h  reactor_loop.cpp  reactor_loop.h  sockio_helper.cpp  sockio_helper.h  timer_helper.cpp  timer_helper.h  timer_sheduler.cpp  timer_sheduler.h
korus/src/tcp/: tcp_channel_base.cpp  tcp_channel_base.h  tcp_client.h  tcp_client_channel.cpp  tcp_client_channel.h  tcp_helper.cpp  tcp_helper.h  tcp_listen.cpp  tcp_listen.h  tcp_server.h  tcp_server_channel.cpp  tcp_server_channel.h  tcp_server_channel_creator.cpp  tcp_server_channel_creator.h
korus/src/thread/: thread_object.cpp  thread_object.h
korus/src/udp/: udp_channel_base.cpp  udp_channel_base.h  udp_client.cpp  udp_client.h  udp_client_channel.cpp  udp_client_channel.h  udp_helper.cpp  udp_helper.h  udp_server.cpp  udp_server.h  udp_server_channel.cpp  udp_server_channel.h
korus/src/util/: basic_defines.h  buffer_thunk.cpp  buffer_thunk.h  chain_object.cpp  chain_object.h  chain_sharedobj_base.cpp  chain_sharedobj_base.h  host_serialize.cpp  host_serialize.h  net_serialize.cpp  net_serialize.h  object_state.cpp  object_state.h  singleton.h  socket_ops.cpp  socket_ops.h  task_queue.cpp  task_queue.h  tcp_util.cpp  tcp_util.h  thread_safe_objbase.cpp  thread_safe_objbase.h  unique_optional_lock.h
reactor/: backend_poller.cpp  backend_poller.h  idle_distributor.h  kqueue_imp.h  reactor_loop.cpp  timer_helper.h  timer_sheduler.h
tcp/: tcp_channel_base.cpp  tcp_client_channel.h  tcp_server.h
util/: tcp_util.cpp  tcp_util.h  unique_optional_lock.h
(+6 files in other folders)
