cmake_minimum_required(VERSION 2.8)

project(konus)

SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")

file(GLOB_RECURSE SRC_LIST FOLLOW_SYMLINKS src/*.c)
file(GLOB_RECURSE SRC_LIST FOLLOW_SYMLINKS src/*.cxx)
file(GLOB_RECURSE SRC_LIST FOLLOW_SYMLINKS src/*.cpp)

add_library(konus STATIC ${SRC_LIST})

install (TARGETS konus DESTINATION lib)