ADD_SUBDIRECTORY(tcp/multithread_tcp_server)
ADD_SUBDIRECTORY(tcp/multithread_tcp_client)
ADD_SUBDIRECTORY(tcp/reactor_tcp_server)
ADD_SUBDIRECTORY(tcp/reactor_tcp_client)

ADD_SUBDIRECTORY(udp/multithread_udp_server)
ADD_SUBDIRECTORY(udp/multithread_udp_client)
ADD_SUBDIRECTORY(udp/reactor_udp_server)
ADD_SUBDIRECTORY(udp/reactor_udp_client)

ADD_SUBDIRECTORY(exts/socks5)




