add_executable(socks5_connectcmd_client socks5_connectcmd_client.cpp)
target_link_libraries(socks5_connectcmd_client korus)
target_link_libraries(socks5_connectcmd_client pthread)
install (TARGETS socks5_connectcmd_client DESTINATION bin)

add_executable(socks5_bindcmd_client socks5_bindcmd_client.cpp)
target_link_libraries(socks5_bindcmd_client korus)
target_link_libraries(socks5_bindcmd_client pthread)
install (TARGETS socks5_bindcmd_client DESTINATION bin)

add_executable(socks5_associatecmd_client socks5_associatecmd_client.cpp)
target_link_libraries(socks5_associatecmd_client korus)
target_link_libraries(socks5_associatecmd_client pthread)
install (TARGETS socks5_associatecmd_client DESTINATION bin)

add_executable(socks5_server socks5_server.cpp)
target_link_libraries(socks5_server korus)
target_link_libraries(socks5_server pthread)
install (TARGETS socks5_server DESTINATION bin)

add_executable(target_server target_server.cpp)
target_link_libraries(target_server korus)
target_link_libraries(target_server pthread)
install (TARGETS target_server DESTINATION bin)
