add_executable(socks5_connectcmd_client socks5_connectcmd_client.cpp)
target_link_libraries(socks5_connectcmd_client korus)
target_link_libraries(socks5_connectcmd_client cares)
target_link_libraries(socks5_connectcmd_client pthread)
install (TARGETS socks5_connectcmd_client DESTINATION bin)

add_executable(socks5_bindcmd_client socks5_bindcmd_client.cpp)
target_link_libraries(socks5_bindcmd_client korus)
target_link_libraries(socks5_bindcmd_client cares)
target_link_libraries(socks5_bindcmd_client pthread)
install (TARGETS socks5_bindcmd_client DESTINATION bin)

add_executable(socks5_associatecmd_client socks5_associatecmd_client.cpp)
target_link_libraries(socks5_associatecmd_client korus)
target_link_libraries(socks5_associatecmd_client cares)
target_link_libraries(socks5_associatecmd_client pthread)
install (TARGETS socks5_associatecmd_client DESTINATION bin)

add_executable(socks5_server socks5_server.cpp)
target_link_libraries(socks5_server korus)
target_link_libraries(socks5_server cares)
target_link_libraries(socks5_server pthread)
install (TARGETS socks5_server DESTINATION bin)

add_executable(tcp_server tcp_server.cpp)
target_link_libraries(tcp_server korus)
target_link_libraries(tcp_server cares)
target_link_libraries(tcp_server pthread)
install (TARGETS tcp_server DESTINATION bin)

add_executable(udp_server udp_server.cpp)
target_link_libraries(udp_server korus)
target_link_libraries(udp_server cares)
target_link_libraries(udp_server pthread)
install (TARGETS udp_server DESTINATION bin)

add_executable(ftp_server ftp_server.cpp)
target_link_libraries(ftp_server korus)
target_link_libraries(ftp_server cares)
target_link_libraries(ftp_server pthread)
install (TARGETS ftp_server DESTINATION bin)
