add_executable(socks5_connectcmd_client socks5_connectcmd_client.cpp)
target_link_libraries(socks5_connectcmd_client korus)
target_link_libraries(socks5_connectcmd_client cares)
target_link_libraries(socks5_connectcmd_client pthread)
install (TARGETS socks5_connectcmd_client DESTINATION bin)

add_executable(socks5_connectcmd_server socks5_connectcmd_server.cpp)
target_link_libraries(socks5_connectcmd_server korus)
target_link_libraries(socks5_connectcmd_server cares)
target_link_libraries(socks5_connectcmd_server pthread)
install (TARGETS socks5_connectcmd_server DESTINATION bin)

add_executable(socks5_bindcmd_client socks5_bindcmd_client.cpp)
target_link_libraries(socks5_bindcmd_client korus)
target_link_libraries(socks5_bindcmd_client cares)
target_link_libraries(socks5_bindcmd_client pthread)
install (TARGETS socks5_bindcmd_client DESTINATION bin)

add_executable(socks5_bindcmd_server socks5_bindcmd_server.cpp)
target_link_libraries(socks5_bindcmd_server korus)
target_link_libraries(socks5_bindcmd_server cares)
target_link_libraries(socks5_bindcmd_server pthread)
install (TARGETS socks5_bindcmd_server DESTINATION bin)

add_executable(socks5_associatecmd_client socks5_associatecmd_client.cpp)
target_link_libraries(socks5_associatecmd_client korus)
target_link_libraries(socks5_associatecmd_client cares)
target_link_libraries(socks5_associatecmd_client pthread)
install (TARGETS socks5_associatecmd_client DESTINATION bin)

add_executable(socks5_associatecmd_server socks5_associatecmd_server.cpp)
target_link_libraries(socks5_associatecmd_server korus)
target_link_libraries(socks5_associatecmd_server cares)
target_link_libraries(socks5_associatecmd_server pthread)
install (TARGETS socks5_associatecmd_server DESTINATION bin)

add_executable(socks5_server socks5_server.cpp)
target_link_libraries(socks5_server korus)
target_link_libraries(socks5_server cares)
target_link_libraries(socks5_server pthread)
install (TARGETS socks5_server DESTINATION bin)
